# arxiv-ai-research-assistant

./: .env.example  .gitignore  README.md  eval_dataset.json  eval_results.json  pyproject.toml
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: AnswerPanel.tsx  MetricsChart.tsx  QueryPanel.tsx  SourcesPanel.tsx
frontend/src/hooks/: useRAGQuery.ts
scripts/: generate_eval_dataset.py  run_eval.py  run_indexer.py  run_pipeline.py
src/api/: main.py  schemas.py
src/evaluation/: __init__.py  eval_runner.py
src/generation/: __init__.py  rag_chain.py
src/pipeline/: chunker.py  database.py  fetcher.py  parser.py  pipeline.py
src/retrieval/: __init__.py  device.py  indexer.py  retrievers.py
tests/: test_regression.py
tests/api/: test_endpoints.py
tests/pipeline/: test_chunker.py  test_database.py  test_fetcher.py
tests/retrieval/: test_retrievers.py
