[tool.poetry]
name = "ai-research-assistant"
version = "0.1.0"
description = "Production RAG system over ArXiv ML/AI papers with hybrid retrieval and RAGAS evaluation"
authors = []
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
arxiv = "^2.1.0"
pymupdf = "^1.24.0"
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
langchain-community = "^0.3.0"
sentence-transformers = "^3.0.0"
qdrant-client = "^1.11.0"
rank-bm25 = "^0.2.2"
ragas = "^0.2.0"
mlflow = "^2.17.0"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
python-dotenv = "^1.0.0"
pydantic-settings = "^2.6.0"
tiktoken = "^0.8.0"
loguru = "^0.7.0"
openai = "^1.50.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.0"
ruff = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
